# ChillingBond

./: .env-template  .gitignore  .pre-commit-config.yaml  Dockerfile_migrations  README.md  alembic.ini  docker-compose.yml  logging.yml  nginx.conf  nginx.conf.template  package-lock.json  prometheus.yml  pyproject.toml  start-nginx.sh
.github/workflows/: ci.yml  version-bump.yml
dockerfiles/: Dockerfile_backend  Dockerfile_frontend  Dockerfile_migrations  Dockerfile_nginx  Dockerfile_scheduler
docs/: VERSIONING.md
frontend/: Dockerfile_frontend  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  middleware.ts  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: AddBondModal.tsx  BondMetrics.ts  BondsList.tsx  BondsTab.tsx  ChartsTab.tsx  DashboardHeader.tsx  HistoryTab.tsx  SideBar.tsx  SortControls.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AddBondModal.tsx  BondModal.tsx  Header.tsx  ProtectedRoute.tsx  Sidebar.tsx  UserButton.tsx  UserGroupProfileModal.tsx
frontend/components/BondModal/: BondBasicInfo.tsx  BondCalculations.tsx  BondFinancialParams.tsx  BondModalFooter.tsx  BondModalHeader.tsx  BondTimeParams.tsx  index.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts  bondCalculations.ts
frontend/types/: TabType.ts  UserData.ts  bond.ts
nginx/: Dockerfile_nginx  nginx.conf.template
src/: __init__.py  setup_logging.py
src/adapters/: config.py  di_container.py
src/adapters/inbound/api/: dependencies.py  exception_handlers.py  main.py  start_api.py
src/adapters/inbound/scheduler/: apscheduler.py  scheduler_container.py  start_scheduler.py
src/adapters/outbound/: apscheduler.py  exceptions.py
src/adapters/outbound/database/: __init__.py  base.py  engine.py  init.sh  models.py
src/adapters/outbound/email_sender/: console_email_sender.py  smtp_email_sender.py
src/adapters/outbound/repositories/: bond.py  bond_holder.py  bondholder.py  reference_rate.py  user.py
src/adapters/outbound/security/: bcrypt_hasher.py  jwt_token_handler.py
src/application/dto/: bond.py  bond_holder.py  bondholder.py  calculations.py  data.py  token.py  user.py
src/application/event_handlers/: bondholder_deleted_handler.py
src/application/events/: event_publisher.py
src/application/use_cases/: bond_update.py
src/application/use_cases/bond/: bond_base.py  bond_create.py  bond_update.py
src/application/use_cases/bond_holder/: bond_holder_add.py  bond_holder_base.py  bond_holder_create.py  bond_holder_get.py
src/application/use_cases/bondholder/: base.py  bh_add.py  bh_create.py  bh_delete.py  bh_get.py  bh_update_quantity.py  bond_update.py  bondholder_add.py  bondholder_base.py  (+4 more)
src/domain/: exceptions.py
src/domain/entities/: bond.py  bond_holder.py  bondholder.py  reference_rate.py  token.py  user.py
src/domain/events/: __init__.py  base.py  bondholder_events.py  user_events.py
src/domain/repositories/: bond.py  user.py
src/domain/services/: bond_income_calculator.py  bondholder_deletion_service.py  bondholder_income_calculator.py  bondholder_maturity_checker.py  email_sender.py  password_hasher.py  password_policy.py
src/domain/value_objects/: email.py
tests/: conftest.py
tests/integration/: conftest.py
tests/load/: .env.locust-template  docker-compose.loadtest.yml  locustfile.py  run_load_test.sh  setup_test_db.py
tests/load/tasks/: auth_task.py  bond_task.py  user_task.py
tests/unit/application/: conftest.py
(+123 files in other folders)
