[project]
name = "chillingbond"
version = "0.1.0"
description = "Application for bond managing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.119.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
